--- a/styles/main.scss
+++ b/styles/main.scss
@@ -7,5 +7,7 @@
 @use 'blocks/icon';
 @use 'blocks/logo';
 @use 'blocks/button';
-@use 'blocks/burger-button';
 @use 'blocks/header';
+@use 'blocks/hero';
+@use 'blocks/transportation-cost';
+@use 'blocks/form';
