--- a/styles/blocks/_icon.scss
+++ b/styles/blocks/_icon.scss
@@ -4,9 +4,10 @@
     display: inline-flex;
     align-items: center;
     column-gap: rem(10);
+    transition: background-image 0.2s ease-in-out;
 
     &::after {
-        --size: #{rem(24)};
+        --size: #{rem(35)};
 
         @include square(var(--size));
         content: '';
@@ -16,9 +17,18 @@
         background-repeat: no-repeat;
     }
 
-    &--yellow-arrow {
+    &--right-arrow {
         &::after {
-            background-image: url('../../icons/arrow-top-right_yellow.svg');
+            background-image: url('../../icons/arrow.svg');
         }
     }
+}
+
+.button-calc .icon {
+    &::after {
+        --size: #{rem(45)};
+
+        @include square(var(--size));
+    }
+
 }
