--- a/styles/main.css
+++ b/styles/main.css
@@ -258,8 +258,10 @@ svg * {
 :root {
   --color-base: #f8f8f8;
   --color-light: #FFFFFF;
+  --color-input-form: #cecece;
   --color-gray: #1e1e1e;
   --color-light-gray: #D9D9D9;
+  --color-notes: #a3a3a3;
   --color-blue: #0063c7;
   --color-accent: #003366;
   --font-family-base: "Montserrat",
@@ -320,10 +322,15 @@ svg * {
 
 body {
   font-size: clamp(0.875rem, 0.7307692308rem + 0.641025641vw, 1.5rem);
+  display: flex;
+  flex-direction: column;
   font-family: var(--font-family-base);
-  letter-spacing: -0.03em;
   color: var(--color-gray);
-  background-color: var(--color-light);
+  background-color: var(--color-base);
+}
+
+main {
+  flex-grow: 1;
 }
 
 h1,
@@ -341,16 +348,6 @@ h6,
   color: var(--color-gray);
 }
 
-h1,
-.h1,
-h2,
-.h2,
-h3,
-.h3 {
-  font-family: var(--font-family-accent);
-  font-weight: 500;
-}
-
 h4,
 .h4,
 h5,
@@ -363,13 +360,19 @@ h6,
 h1,
 .h1 {
   font-size: clamp(1.875rem, 1.2980769231rem + 2.5641025641vw, 4.375rem);
+  text-transform: uppercase;
   line-height: 1.2;
 }
 
 h2,
 .h2 {
-  font-size: clamp(1.75rem, 1.3173076923rem + 1.9230769231vw, 3.625rem);
-  line-height: 1.3;
+  font-size: clamp(1.625rem, 1.3942307692rem + 1.0256410256vw, 2.625rem);
+  text-transform: uppercase;
+  line-height: 1.4;
+}
+
+.h2 span {
+  color: var(--color-blue);
 }
 
 h3,
@@ -392,7 +395,7 @@ h6,
   font-size: clamp(1rem, 0.9423076923rem + 0.2564102564vw, 1.25rem);
 }
 
-добавить интерактивносит элементам a,
+a,
 button,
 label,
 input,
@@ -419,6 +422,10 @@ a[class] {
   text-decoration: none;
 }
 
+.color-blue {
+  color: var(--color-blue);
+}
+
 :focus-visible {
   outline: 0.125rem dashed var(--color-gray);
   outline-offset: 0.25rem;
@@ -429,9 +436,10 @@ a[class] {
   display: inline-flex;
   align-items: center;
   column-gap: 0.625rem;
+  transition: background-image 0.2s ease-in-out;
 }
 .icon::after {
-  --size: 1.5rem;
+  --size: 2.1875rem;
   width: var(--size);
   height: var(--size);
   content: "";
@@ -440,8 +448,39 @@ a[class] {
   background-size: contain;
   background-repeat: no-repeat;
 }
-.icon--yellow-arrow::after {
-  background-image: url("../../icons/arrow-top-right_yellow.svg");
+.icon--right-arrow::after {
+  background-image: url("../../icons/arrow.svg");
+}
+
+.button-calc .icon::after {
+  --size: 2.8125rem;
+  width: var(--size);
+  height: var(--size);
+}
+
+.button {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 20px;
+  min-width: max-content;
+  padding: 7px 7px 7px 20px;
+  font-family: var(--font-family-accent);
+  font-size: 24px;
+  font-weight: 700;
+  color: var(--color-light);
+  white-space: nowrap;
+  background-color: var(--color-blue);
+  border-radius: 10px;
+  background-image: linear-gradient(var(--color-accent), var(--color-accent));
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-size: 0% 100%;
+  transition: background-size 0.2s, color 0.2s ease-in-out;
+}
+.button:hover {
+  background-size: 100% 100%;
+  color: var(--color-light-gray);
 }
 
 /*---------HEADER (START)--------*/
@@ -760,13 +799,108 @@ a[class] {
   font-weight: 500;
 }
 
-.menu-mob__link::after {
-  content: "";
-  aspect-ratio: 1;
-  width: 35px;
-  background: url("/icons/arrow.svg") center/contain no-repeat;
+/*---------MOBILE MENU (END)--------*/
+.transportation-cost {
+  padding-block: 150px;
+}
+.transportation-cost__wrap {
+  display: flex;
+  flex-direction: column;
+}
+.transportation-cost__wrap .h2 {
+  margin-bottom: 100px;
 }
 
-/*---------MOBILE MENU (END)--------*/
+.form-request {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: auto auto auto;
+  row-gap: 50px;
+  column-gap: 32px;
+}
+.form-request__cell:nth-child(1) {
+  grid-column: 1;
+  grid-row: 1;
+}
+.form-request__cell:nth-child(2) {
+  grid-column: 2;
+  grid-row: 1;
+}
+.form-request__cell:nth-child(3) {
+  grid-column: 1;
+  grid-row: 2;
+}
+.form-request__cell:nth-child(4) {
+  grid-column: 2;
+  grid-row: 2;
+}
+.form-request__cell:nth-child(5) {
+  grid-column: 3;
+  grid-row: 1/3;
+}
+.form-request__actions {
+  grid-column: 1/3;
+  grid-row: 3;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  font-weight: 500;
+  color: var(--color-notes);
+}
+.form-request .button-calc {
+  grid-column: 3;
+  grid-row: 3;
+  max-width: max-content;
+  justify-self: flex-end;
+  outline: transparent;
+}
+.form-request .field {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  row-gap: 35px;
+  font-weight: 500;
+  caret-color: var(--color-blue);
+}
+.form-request .field__control {
+  width: 100%;
+  height: 87px;
+  padding-inline: 30px;
+  background-color: var(--color-base);
+  border: 1px solid var(--color-input-form);
+  border-radius: 10px;
+}
+.form-request .field__control::placeholder {
+  font-weight: 600;
+  color: var(--color-input-form);
+}
+.form-request .field__control:focus-visible {
+  border-color: var(--color-blue);
+}
+@media (any-hover: hover) {
+  .form-request .field__control:hover {
+    border-color: var(--color-blue);
+  }
+}
+@media (any-hover: none) {
+  .form-request .field__control:active {
+    border-color: var(--color-blue);
+  }
+}
+.form-request textarea.field__control {
+  resize: vertical;
+  min-height: 295px;
+  padding: 30px 20px;
+}
+@media (width <= 63.99875rem) {
+  .form-request textarea.field__control {
+    padding: 18px 30px;
+  }
+}
+@media (width <= 47.99875rem) {
+  .form-request textarea.field__control {
+    min-height: 240px;
+  }
+}
 
 /*# sourceMappingURL=main.css.map */
