--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -2,8 +2,7 @@
 
 
 body {
-    @include fluid-text(24, 14);
-
+    font-size: 24px;
     display: flex;
     flex-direction: column;
 
@@ -11,6 +10,10 @@ body {
     // letter-spacing: -0.03em;
     color: var(--color-gray);
     background-color: var(--color-base);
+
+    @include tablet {
+        font-size: 18px;
+    }
 }
 
 main {
@@ -53,9 +56,18 @@ h1,
 
 h2,
 .h2 {
-    @include fluid-text(42, 26);
+
+    font-size: rem(42);
     text-transform: uppercase;
     line-height: 1.4;
+
+    @include tablet {
+        font-size: rem(36);
+    }
+
+    @include mobile {
+        font-size: rem(26);
+    }
 
 }
 
@@ -91,6 +103,12 @@ textarea,
 select,
 svg * {
     transition-duration: var(--transition-duration);
+}
+
+button,
+button:active,
+button:focus {
+    border: none;
 }
 
 a {
