--- a/styles/blocks/_form.scss
+++ b/styles/blocks/_form.scss
@@ -7,6 +7,19 @@
     row-gap: 50px;
     column-gap: 32px;
 
+    @include tablet {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: auto auto auto auto;
+        column-gap: 16px;
+    }
+
+    @include mobile {
+        grid-template-columns: 1fr;
+        grid-template-rows: auto auto auto auto auto auto auto;
+        row-gap: 25px;
+        column-gap: 0;
+    }
+
     &__cell {
         &:nth-child(1) {
             grid-column: 1;
@@ -16,21 +29,46 @@
         &:nth-child(2) {
             grid-column: 2;
             grid-row: 1;
+
+            @include mobile {
+                grid-column: 1;
+                grid-row: 2;
+            }
         }
 
         &:nth-child(3) {
             grid-column: 1;
             grid-row: 2;
+
+            @include mobile {
+                grid-column: 1;
+                grid-row: 3;
+            }
         }
 
         &:nth-child(4) {
             grid-column: 2;
             grid-row: 2;
+
+            @include mobile {
+                grid-column: 1;
+                grid-row: 4;
+            }
         }
 
         &:nth-child(5) {
             grid-column: 3;
             grid-row: 1/ 3;
+
+            @include tablet {
+                grid-column: 1 / 3;
+                grid-row: 3;
+            }
+
+            @include mobile {
+                grid-column: 1;
+                grid-row: 5;
+            }
         }
     }
 
@@ -42,6 +80,18 @@
         justify-content: flex-start;
         font-weight: 500;
         color: var(--color-notes);
+
+        @include tablet {
+            grid-column: 1;
+            grid-row: 4;
+            padding-right: 68px;
+
+            @include mobile {
+                grid-column: 1;
+                grid-row: 6;
+                padding-right: 0;
+            }
+        }
     }
 
     .button-calc {
@@ -49,7 +99,20 @@
         grid-row: 3;
         max-width: max-content;
         justify-self: flex-end;
-        outline: transparent;
+
+        @include tablet {
+            grid-column: 2;
+            grid-row: 4;
+        }
+
+        @include mobile {
+            grid-column: 1;
+            grid-row: 7;
+            justify-content: space-between;
+            justify-self: center;
+            max-width: 100%;
+            width: 100%;
+        }
     }
 
     .field {
@@ -58,7 +121,11 @@
         align-items: start;
         row-gap: 35px;
         font-weight: 500;
-        caret-color: var(--color-blue) ;
+        caret-color: var(--color-blue);
+
+        @include mobile {
+            row-gap: 25px;
+        }
 
         &__control {
             width: 100%;
@@ -68,6 +135,16 @@
             background-color: var(--color-base);
             border: 1px solid var(--color-input-form);
             border-radius: 10px;
+
+            @include tablet {
+                padding-inline: 30px 18px;
+                height: 65px;
+            }
+
+            @include mobile {
+                padding-inline: 16px 18px;
+                height: 50px;
+            }
 
             &::placeholder {
                 font-weight: 600;
@@ -81,9 +158,7 @@
             @include hover {
                 border-color: var(--color-blue);
             }
-
         }
-
     }
 
     textarea.field__control {
@@ -93,12 +168,12 @@
 
         @include tablet {
             padding: 18px 30px;
+            min-height: 186px;
         }
 
         @include mobile {
+            padding: 16px 18px;
             min-height: 240px;
         }
     }
-
-
 }
