--- a/styles/main.css
+++ b/styles/main.css
@@ -321,12 +321,17 @@ svg * {
 }
 
 body {
-  font-size: clamp(0.875rem, 0.7307692308rem + 0.641025641vw, 1.5rem);
+  font-size: 24px;
   display: flex;
   flex-direction: column;
   font-family: var(--font-family-base);
   color: var(--color-gray);
   background-color: var(--color-base);
+}
+@media (width <= 63.99875rem) {
+  body {
+    font-size: 18px;
+  }
 }
 
 main {
@@ -359,16 +364,28 @@ h6,
 
 h1,
 .h1 {
-  font-size: clamp(1.875rem, 1.2980769231rem + 2.5641025641vw, 4.375rem);
+  font-size: clamp(1.6666666667rem, 1.1538461538rem + 2.5641025641vw, 3.8888888889rem);
   text-transform: uppercase;
   line-height: 1.2;
 }
 
 h2,
 .h2 {
-  font-size: clamp(1.625rem, 1.3942307692rem + 1.0256410256vw, 2.625rem);
+  font-size: 2.625rem;
   text-transform: uppercase;
   line-height: 1.4;
+}
+@media (width <= 63.99875rem) {
+  h2,
+  .h2 {
+    font-size: 2.25rem;
+  }
+}
+@media (width <= 47.99875rem) {
+  h2,
+  .h2 {
+    font-size: 1.625rem;
+  }
 }
 
 .h2 span {
@@ -377,22 +394,22 @@ h2,
 
 h3,
 .h3 {
-  font-size: clamp(1.5rem, 1.2692307692rem + 1.0256410256vw, 2.5rem);
+  font-size: clamp(1.3333333333rem, 1.1282051282rem + 1.0256410256vw, 2.2222222222rem);
 }
 
 h4,
 .h4 {
-  font-size: clamp(1.125rem, 1.0096153846rem + 0.5128205128vw, 1.625rem);
+  font-size: clamp(1rem, 0.8974358974rem + 0.5128205128vw, 1.4444444444rem);
 }
 
 h5,
 .h5 {
-  font-size: clamp(1.125rem, 1.0384615385rem + 0.3846153846vw, 1.5rem);
+  font-size: clamp(1rem, 0.9230769231rem + 0.3846153846vw, 1.3333333333rem);
 }
 
 h6,
 .h6 {
-  font-size: clamp(1rem, 0.9423076923rem + 0.2564102564vw, 1.25rem);
+  font-size: clamp(0.8888888889rem, 0.8376068376rem + 0.2564102564vw, 1.1111111111rem);
 }
 
 a,
@@ -403,6 +420,12 @@ textarea,
 select,
 svg * {
   transition-duration: var(--transition-duration);
+}
+
+button,
+button:active,
+button:focus {
+  border: none;
 }
 
 a {
@@ -464,6 +487,7 @@ a[class] {
   align-items: center;
   column-gap: 20px;
   min-width: max-content;
+  max-height: max-content;
   padding: 7px 7px 7px 20px;
   font-family: var(--font-family-accent);
   font-size: 24px;
@@ -481,6 +505,11 @@ a[class] {
 .button:hover {
   background-size: 100% 100%;
   color: var(--color-light-gray);
+}
+@media (width <= 47.99875rem) {
+  .button {
+    font-size: 18px;
+  }
 }
 
 /*---------HEADER (START)--------*/
@@ -803,12 +832,22 @@ a[class] {
 .transportation-cost {
   padding-block: 150px;
 }
+@media (width <= 63.99875rem) {
+  .transportation-cost {
+    padding-block: 100px;
+  }
+}
 .transportation-cost__wrap {
   display: flex;
   flex-direction: column;
 }
 .transportation-cost__wrap .h2 {
   margin-bottom: 100px;
+}
+@media (width <= 47.99875rem) {
+  .transportation-cost__wrap .h2 {
+    margin-bottom: 75px;
+  }
 }
 
 .form-request {
@@ -818,6 +857,21 @@ a[class] {
   row-gap: 50px;
   column-gap: 32px;
 }
+@media (width <= 63.99875rem) {
+  .form-request {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: auto auto auto auto;
+    column-gap: 16px;
+  }
+}
+@media (width <= 47.99875rem) {
+  .form-request {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto auto auto auto auto auto;
+    row-gap: 25px;
+    column-gap: 0;
+  }
+}
 .form-request__cell:nth-child(1) {
   grid-column: 1;
   grid-row: 1;
@@ -826,17 +880,47 @@ a[class] {
   grid-column: 2;
   grid-row: 1;
 }
+@media (width <= 47.99875rem) {
+  .form-request__cell:nth-child(2) {
+    grid-column: 1;
+    grid-row: 2;
+  }
+}
 .form-request__cell:nth-child(3) {
   grid-column: 1;
   grid-row: 2;
+}
+@media (width <= 47.99875rem) {
+  .form-request__cell:nth-child(3) {
+    grid-column: 1;
+    grid-row: 3;
+  }
 }
 .form-request__cell:nth-child(4) {
   grid-column: 2;
   grid-row: 2;
 }
+@media (width <= 47.99875rem) {
+  .form-request__cell:nth-child(4) {
+    grid-column: 1;
+    grid-row: 4;
+  }
+}
 .form-request__cell:nth-child(5) {
   grid-column: 3;
   grid-row: 1/3;
+}
+@media (width <= 63.99875rem) {
+  .form-request__cell:nth-child(5) {
+    grid-column: 1/3;
+    grid-row: 3;
+  }
+}
+@media (width <= 47.99875rem) {
+  .form-request__cell:nth-child(5) {
+    grid-column: 1;
+    grid-row: 5;
+  }
 }
 .form-request__actions {
   grid-column: 1/3;
@@ -847,12 +931,41 @@ a[class] {
   font-weight: 500;
   color: var(--color-notes);
 }
+@media (width <= 63.99875rem) {
+  .form-request__actions {
+    grid-column: 1;
+    grid-row: 4;
+    padding-right: 68px;
+  }
+}
+@media (width <= 63.99875rem) and (width <= 47.99875rem) {
+  .form-request__actions {
+    grid-column: 1;
+    grid-row: 6;
+    padding-right: 0;
+  }
+}
 .form-request .button-calc {
   grid-column: 3;
   grid-row: 3;
   max-width: max-content;
   justify-self: flex-end;
-  outline: transparent;
+}
+@media (width <= 63.99875rem) {
+  .form-request .button-calc {
+    grid-column: 2;
+    grid-row: 4;
+  }
+}
+@media (width <= 47.99875rem) {
+  .form-request .button-calc {
+    grid-column: 1;
+    grid-row: 7;
+    justify-content: space-between;
+    justify-self: center;
+    max-width: 100%;
+    width: 100%;
+  }
 }
 .form-request .field {
   display: flex;
@@ -862,6 +975,11 @@ a[class] {
   font-weight: 500;
   caret-color: var(--color-blue);
 }
+@media (width <= 47.99875rem) {
+  .form-request .field {
+    row-gap: 25px;
+  }
+}
 .form-request .field__control {
   width: 100%;
   height: 87px;
@@ -869,6 +987,18 @@ a[class] {
   background-color: var(--color-base);
   border: 1px solid var(--color-input-form);
   border-radius: 10px;
+}
+@media (width <= 63.99875rem) {
+  .form-request .field__control {
+    padding-inline: 30px 18px;
+    height: 65px;
+  }
+}
+@media (width <= 47.99875rem) {
+  .form-request .field__control {
+    padding-inline: 16px 18px;
+    height: 50px;
+  }
 }
 .form-request .field__control::placeholder {
   font-weight: 600;
@@ -895,10 +1025,12 @@ a[class] {
 @media (width <= 63.99875rem) {
   .form-request textarea.field__control {
     padding: 18px 30px;
+    min-height: 186px;
   }
 }
 @media (width <= 47.99875rem) {
   .form-request textarea.field__control {
+    padding: 16px 18px;
     min-height: 240px;
   }
 }
