--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -77,7 +77,19 @@ h2,
 
 h3,
 .h3 {
-    @include fluid-text(40, 24);
+    font-size: rem(36);
+    text-transform: uppercase;
+    line-height: 1.4;
+    font-weight: 700;
+
+    @include tablet {
+        font-size: rem(32);
+    }
+
+    @include mobile {
+        font-size: rem(28);
+    }
+
 }
 
 h4,
@@ -121,6 +133,17 @@ a {
     // отключить подчеркивание ссылок, у которых есть класс
     &[class] {
         text-decoration: none;
+    }
+}
+
+.desc {
+    color: var(--color-notes);
+
+    @include tablet {
+        font-size: rem(24);
+    }
+    @include mobile {
+        font-size: rem(18);
     }
 }
 
