--- a/styles/main.css
+++ b/styles/main.css
@@ -414,7 +414,23 @@ h3,
 
 h4,
 .h4 {
-  font-size: clamp(1rem, 0.8974358974rem + 0.5128205128vw, 1.4444444444rem);
+  font-size: 1.5rem;
+  font-family: var(--font-family-accent);
+  font-weight: 700;
+  color: var(--color-light);
+}
+@media (width <= 63.99875rem) {
+  h4,
+  .h4 {
+    font-size: 1.25rem;
+    line-height: 1;
+  }
+}
+@media (width <= 47.99875rem) {
+  h4,
+  .h4 {
+    font-size: 0.875rem;
+  }
 }
 
 h5,
@@ -458,6 +474,20 @@ a {
 }
 a[class] {
   text-decoration: none;
+}
+
+.section {
+  padding-bottom: 150px;
+}
+@media (width <= 63.99875rem) {
+  .section {
+    padding-bottom: 130px;
+  }
+}
+@media (width <= 47.99875rem) {
+  .section {
+    padding-bottom: 100px;
+  }
 }
 
 .desc {
@@ -543,6 +573,7 @@ a[class] {
 
 /*---------HEADER (START)--------*/
 .header__wrap {
+  z-index: 100;
   position: sticky;
   top: 0;
 }
@@ -1064,19 +1095,6 @@ a[class] {
   }
 }
 
-.about {
-  padding-bottom: 150px;
-}
-@media (width <= 63.99875rem) {
-  .about {
-    padding-bottom: 130px;
-  }
-}
-@media (width <= 47.99875rem) {
-  .about {
-    padding-bottom: 100px;
-  }
-}
 .about__inner {
   display: flex;
   flex-direction: column;
@@ -1197,6 +1215,112 @@ a[class] {
   .about__item:nth-child(2) .about-card__description {
     color: var(--color-light);
   }
+}
+
+.faq__inner {
+  display: flex;
+  flex-direction: column;
+  row-gap: 100px;
+}
+@media (width <= 47.99875rem) {
+  .faq__inner {
+    row-gap: 75px;
+  }
+}
+.faq__header {
+  display: grid;
+  row-gap: 30px;
+}
+
+.accordion-group {
+  display: grid;
+  row-gap: 30px;
+}
+
+.accordion__details {
+  background-color: var(--color-blue);
+  height: 60px;
+  border-radius: 10px;
+  padding: 7px 8px 7px 20px;
+  margin-inline: auto;
+}
+.accordion__details[open] .accordion__title .square::before, .accordion__details[open] .accordion__title .square::after {
+  background-color: var(--color-blue);
+}
+.accordion__details[open] .accordion__title .square::after {
+  rotate: 0deg;
+}
+.accordion__details[open] + .accordion__content {
+  grid-template-rows: 1fr;
+}
+.accordion__summary {
+  color: var(--color-light);
+  list-style: none;
+}
+@media (any-hover: hover) {
+  .accordion__summary:hover {
+    color: var(--color-accent);
+  }
+}
+@media (any-hover: none) {
+  .accordion__summary:active {
+    color: var(--color-accent);
+  }
+}
+.accordion__summary::-webkit-details-marker {
+  display: none;
+}
+.accordion__title {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: var(--color-light);
+  transition-duration: var(--transition-duration);
+}
+.accordion__title .square {
+  position: relative;
+  display: block;
+  width: 45px;
+  height: 45px;
+  aspect-ratio: 1;
+  border-radius: 6px;
+  background-color: var(--color-light);
+  box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.05);
+  margin-left: 10px;
+}
+.accordion__title .square::before, .accordion__title .square::after {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  translate: -50% -50%;
+  content: "";
+  right: 0;
+  width: 1rem;
+  height: 0.125rem;
+  background-color: var(--color-blue);
+  border-radius: 1rem;
+  transition-duration: var(--transition-duration);
+}
+.accordion__title .square::after {
+  rotate: 90deg;
+}
+.accordion__content {
+  display: grid;
+  grid-template-rows: 0fr;
+  transition-duration: 0.3s;
+}
+.accordion__content-inner {
+  background-color: var(--color-light);
+  overflow: hidden;
+}
+.accordion__content-body {
+  font-size: 18px;
+  padding: 40px 20px;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.05);
+  margin-top: -5px;
 }
 
 /*# sourceMappingURL=main.css.map */
