секция Наши клиенты без анимации - десктоп, планшет, мобилка

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -8,6 +8,7 @@
 @use 'blocks/logo';
 @use 'blocks/button';
 @use 'blocks/header';
+@use 'blocks/tile';
 @use 'blocks/hero';
 @use 'blocks/transportation-cost';
 @use 'blocks/form';
@@ -15,3 +16,4 @@
 @use 'blocks/about_card';
 @use 'blocks/faq';
 @use 'blocks/accordion';
+@use 'blocks/our-clients';
