--- a/styles/helpers/_mixins.scss
+++ b/styles/helpers/_mixins.scss
@@ -35,11 +35,18 @@
     left: 50%;
     translate: -50% -50%;
 }
+
+@mixin abs-x {
+    position: absolute;
+    left: 50%;
+    translate: -50%;
+}
+
 @mixin abs-y {
     position: absolute;
     top: 50%;
     translate: 0 -50%;
-  }
+}
 
 // квадрат
 @mixin square($size) {
