--- a/styles/main.css
+++ b/styles/main.css
@@ -889,6 +889,10 @@ a[class] {
 }
 
 /*---------MOBILE MENU (END)--------*/
+.tile {
+  border-radius: 20px;
+}
+
 .transportation-cost {
   padding-block: 150px;
 }
@@ -1153,6 +1157,9 @@ a[class] {
   position: relative;
   z-index: 1;
 }
+.about-card:hover {
+  box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.05);
+}
 .about-card:hover .about-card__title,
 .about-card:hover .about-card__description {
   color: var(--color-light);
@@ -1161,10 +1168,10 @@ a[class] {
   opacity: 1;
 }
 .about__item:nth-child(1) .about-card::before {
-  background-image: linear-gradient(rgba(0, 0, 255, 0.8), rgba(0, 0, 255, 0.8)), url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTi3vlT5dDAjGcfFMvv4WTu5P-go2UphNmvbQ&s");
+  background-image: linear-gradient(rgba(0, 99, 199, 0.8), rgba(0, 99, 199, 0.8)), url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTi3vlT5dDAjGcfFMvv4WTu5P-go2UphNmvbQ&s");
 }
 .about__item:nth-child(2) .about-card::before {
-  background-image: linear-gradient(rgba(0, 0, 255, 0.8), rgba(0, 0, 255, 0.8)), url("https://kartinkof.club/uploads/posts/2022-12/1670445222_kartinkof-club-p-kartinki-gubka-bob-3.png");
+  background-image: linear-gradient(rgba(0, 99, 199, 0.8), rgba(0, 99, 199, 0.8)), url("https://kartinkof.club/uploads/posts/2022-12/1670445222_kartinkof-club-p-kartinki-gubka-bob-3.png");
 }
 @media (width <= 63.99875rem) {
   .about-card {
@@ -1321,6 +1328,131 @@ a[class] {
   border-bottom-left-radius: 10px;
   box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.05);
   margin-top: -5px;
+}
+
+.our-clients__inner {
+  display: flex;
+  flex-direction: column;
+  row-gap: 100px;
+}
+@media (width <= 47.99875rem) {
+  .our-clients__inner {
+    row-gap: 75px;
+  }
+}
+.our-clients__list {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
+}
+@media (width <= 90.06125rem) {
+  .our-clients__list {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media (width <= 47.99875rem) {
+  .our-clients__list {
+    grid-template-columns: 1fr;
+  }
+}
+.our-clients__item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  padding: 25px 5px 25px 25px;
+  border-radius: 20px;
+  height: 200px;
+  background-color: var(--color-blue);
+  color: var(--color-light);
+}
+.our-clients__item::before {
+  content: "";
+  position: absolute;
+  top: 20px;
+  right: 17px;
+  width: 19px;
+  height: 6px;
+  background-color: var(--color-light);
+}
+@media (width <= 63.99875rem) {
+  .our-clients__item {
+    height: 165px;
+  }
+}
+@media (width <= 47.99875rem) {
+  .our-clients__item {
+    border-radius: 10px;
+    padding: 15px 30px 15px 15px;
+    height: 130px;
+  }
+}
+.our-clients__item h3 {
+  color: var(--color-light);
+}
+@media (width <= 63.99875rem) {
+  .our-clients__item h3 {
+    font-size: 1.5rem;
+  }
+}
+@media (width <= 47.99875rem) {
+  .our-clients__item h3 {
+    font-size: 1.375rem;
+  }
+}
+.our-clients__item:nth-child(even) {
+  background-color: var(--color-light);
+  box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.05);
+}
+.our-clients__item:nth-child(even)::before {
+  background-color: var(--color-blue);
+}
+.our-clients__item:nth-child(even) h3 {
+  color: var(--color-gray);
+}
+@media (width <= 90.06125rem) {
+  .our-clients__item:nth-child(1), .our-clients__item:nth-child(4), .our-clients__item:nth-child(5) {
+    background-color: var(--color-blue);
+    color: var(--color-light);
+  }
+  .our-clients__item:nth-child(1)::before, .our-clients__item:nth-child(4)::before, .our-clients__item:nth-child(5)::before {
+    background-color: var(--color-light);
+  }
+  .our-clients__item:nth-child(1) h3, .our-clients__item:nth-child(4) h3, .our-clients__item:nth-child(5) h3 {
+    color: var(--color-light);
+  }
+  .our-clients__item:nth-child(2), .our-clients__item:nth-child(3), .our-clients__item:nth-child(6) {
+    background-color: var(--color-light);
+    color: var(--color-gray);
+  }
+  .our-clients__item:nth-child(2)::before, .our-clients__item:nth-child(3)::before, .our-clients__item:nth-child(6)::before {
+    background-color: var(--color-blue);
+  }
+  .our-clients__item:nth-child(2) h3, .our-clients__item:nth-child(3) h3, .our-clients__item:nth-child(6) h3 {
+    color: var(--color-gray);
+  }
+}
+@media (width <= 47.99875rem) {
+  .our-clients__item:nth-child(odd) {
+    background-color: var(--color-blue);
+    color: var(--color-light);
+  }
+  .our-clients__item:nth-child(odd)::before {
+    background-color: var(--color-light);
+  }
+  .our-clients__item:nth-child(odd) h3 {
+    color: var(--color-light);
+  }
+  .our-clients__item:nth-child(even) {
+    background-color: var(--color-light);
+    color: var(--color-gray);
+  }
+  .our-clients__item:nth-child(even)::before {
+    background-color: var(--color-blue);
+  }
+  .our-clients__item:nth-child(even) h3 {
+    color: var(--color-gray);
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
