--- a/styles/main.css
+++ b/styles/main.css
@@ -1168,10 +1168,16 @@ a[class] {
   opacity: 1;
 }
 .about__item:nth-child(1) .about-card::before {
-  background-image: linear-gradient(rgba(0, 99, 199, 0.8), rgba(0, 99, 199, 0.8)), url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTi3vlT5dDAjGcfFMvv4WTu5P-go2UphNmvbQ&s");
+  background-image: linear-gradient(rgba(0, 99, 199, 0.8), rgba(0, 99, 199, 0.8)), url("../../images/about/01.png");
 }
 .about__item:nth-child(2) .about-card::before {
-  background-image: linear-gradient(rgba(0, 99, 199, 0.8), rgba(0, 99, 199, 0.8)), url("https://kartinkof.club/uploads/posts/2022-12/1670445222_kartinkof-club-p-kartinki-gubka-bob-3.png");
+  background-image: linear-gradient(rgba(0, 99, 199, 0.8), rgba(0, 99, 199, 0.8)), url("../../images/about/02.png");
+}
+.about__item:nth-child(3) .about-card::before {
+  background-image: linear-gradient(rgba(0, 99, 199, 0.8), rgba(0, 99, 199, 0.8)), url("../../images/about/03.png");
+}
+.about__item:nth-child(4) .about-card::before {
+  background-image: linear-gradient(rgba(0, 99, 199, 0.8), rgba(0, 99, 199, 0.8)), url("../../images/about/04.png");
 }
 @media (width <= 63.99875rem) {
   .about-card {
