--- a/styles/main.css
+++ b/styles/main.css
@@ -1461,4 +1461,79 @@ a[class] {
   }
 }
 
+.work-process__inner {
+  display: flex;
+  flex-direction: column;
+  row-gap: 100px;
+}
+@media (width <= 47.99875rem) {
+  .work-process__inner {
+    row-gap: 75px;
+  }
+}
+.work-process__header {
+  display: grid;
+  row-gap: 30px;
+}
+.work-process__description {
+  font-size: 1.125rem;
+  line-height: 1;
+  margin-top: auto;
+}
+.work-process__list {
+  display: grid;
+  grid-template-columns: 1fr 60px 60px 1fr;
+  grid-template-rows: auto auto;
+  gap: 1rem;
+}
+@media (width <= 90.06125rem) {
+  .work-process__list {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (width <= 63.99875rem) {
+  .work-process__list {
+    grid-template-columns: 1fr;
+  }
+}
+.work-process__item {
+  display: flex;
+  flex-direction: column;
+  height: 270px;
+  padding: 35px 25px 30px 25px;
+  border-radius: 20px;
+  background-color: var(--color-light);
+}
+.work-process__item:nth-child(1) {
+  grid-column: 1/3;
+  grid-row: 1;
+}
+.work-process__item:nth-child(2) {
+  grid-column: 3/5;
+  grid-row: 1;
+}
+.work-process__item:nth-child(3) {
+  grid-column: 1/4;
+  grid-row: 2;
+}
+.work-process__item:nth-child(4) {
+  grid-column: 4/5;
+  grid-row: 2;
+}
+.work-process__item:nth-child(1), .work-process__item:nth-child(4) {
+  background-color: var(--color-blue);
+  color: var(--color-light);
+}
+.work-process__item:nth-child(1) h3, .work-process__item:nth-child(4) h3 {
+  color: var(--color-light);
+}
+.work-process__item:nth-child(2), .work-process__item:nth-child(3) {
+  background-color: var(--color-light);
+  color: var(--color-gray);
+  box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.05);
+}
+.work-process__item:nth-child(2) h3, .work-process__item:nth-child(3) h3 {
+  color: var(--color-gray);
+}
+
 /*# sourceMappingURL=main.css.map */
