секция Как мы работаем - планшет, мобилка БЕЗ АНИМАЦИИ

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -21,7 +21,7 @@
     --container-padding-x: #{rem(16)};
 
     --transition-duration: 0.4s;
-
+    --box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.05);
     --100vw: calc(100vw - var(--scrollbar-width));
 
     // контейнер на лэптопе
