--- a/styles/blocks/_accordion.scss
+++ b/styles/blocks/_accordion.scss
@@ -38,10 +38,6 @@
         color: var(--color-light);
         list-style: none;
 
-        @include hover {
-            color: var(--color-accent);
-        }
-
         &::-webkit-details-marker {
             display: none;
         }
@@ -63,7 +59,7 @@
             aspect-ratio: 1;
             border-radius: 6px;
             background-color: var(--color-light);
-            box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.05);
+            box-shadow: var(--box-shadow);
             margin-left: 10px;
 
             &::before,
@@ -100,7 +96,7 @@
             padding: 40px 20px;
             border-bottom-right-radius: 10px;
             border-bottom-left-radius: 10px;
-            box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.05);
+            box-shadow: var(--box-shadow);
             margin-top: -5px;
         }
     }
