--- a/styles/blocks/_work-process.scss
+++ b/styles/blocks/_work-process.scss
@@ -4,88 +4,125 @@
     &__inner {
         display: flex;
         flex-direction: column;
-        row-gap: 100px;
-
-        @include mobile {
-            row-gap: 75px;
-        }
-
     }
 
-    &__header {
-        display: grid;
-        row-gap: 30px;
-    }
-    &__description{
-        font-size: rem(18);
+    &__description {
+        font-size: 18px;
         line-height: 1;
         margin-top: auto;
+
+        @include mobile {
+            font-size: rem(16);
+        }
     }
 
     &__list {
         display: grid;
         grid-template-columns: 1fr 60px 60px 1fr;
         grid-template-rows: auto auto;
-        gap: rem(16);
-
-        @include laptop {
-            grid-template-columns: repeat(2, 1fr);
-        }
+        gap: 16px;
 
         @include tablet {
             grid-template-columns: 1fr;
+            grid-template-rows: auto auto auto auto;
         }
     }
 
     &__item {
         display: flex;
         flex-direction: column;
-        height: 270px;
+        row-gap: 34px;
         padding: 35px 25px 30px 25px;
         border-radius: 20px;
         background-color: var(--color-light);
+        color: var(--color-gray);
+        box-shadow: var(--box-shadow);
 
-        &:nth-child(1) {
-            grid-column: 1/3;
-            grid-row: 1;
+        @include tablet {
+            row-gap: 10px;
+            height: 300px;
+            padding: 50px 35px 25px 25px;
         }
 
-        &:nth-child(2) {
-            grid-column: 3/5;
-            grid-row: 1;
+        @include mobile {
+            border-radius: 10px;
+            padding: 50px 40px 25px 25px;
+            height: auto;
+            row-gap: 50px;
         }
 
-        &:nth-child(3) {
-            grid-column: 1/4;
-            grid-row: 2;
-        }
+        h3 {
+            color: var(--color-gray);
 
-        &:nth-child(4) {
-            grid-column: 4/5;
-            grid-row: 2;
+            @include tablet {
+                font-size: 36px;
+            }
+
+            @include mobile {
+                font-size: rem(20);
+            }
         }
 
         &:nth-child(1),
         &:nth-child(4) {
             background-color: var(--color-blue);
             color: var(--color-light);
-
+            box-shadow: none;
 
             h3 {
                 color: var(--color-light);
             }
         }
 
-        &:nth-child(2),
+        &:nth-child(1) {
+            grid-column: 1 / 3;
+            grid-row: 1;
+
+            @include tablet {
+                grid-column: 1;
+                grid-row: 1;
+            }
+
+            @include mobile {
+                .work-process__title {
+                    padding-right: 70px;
+                }
+            }
+        }
+
+        &:nth-child(2) {
+            grid-column: 3 / 5;
+            grid-row: 1;
+
+            @include tablet {
+                grid-column: 1;
+                grid-row: 2;
+            }
+        }
+
         &:nth-child(3) {
-            background-color: var(--color-light);
-            color: var(--color-gray);
-            box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.05);
+            grid-column: 1 / 4;
+            grid-row: 2;
 
+            @include tablet {
+                grid-column: 1;
+                grid-row: 3;
+            }
+        }
 
+        &:nth-child(4) {
+            grid-column: 4 / 5;
+            grid-row: 2;
 
-            h3 {
-                color: var(--color-gray);
+            @include tablet {
+                grid-column: 1;
+                grid-row: 4;
+            }
+
+            @include mobile {
+                .work-process__title {
+                    padding-right: 70px;
+                }
             }
         }
     }
