--- a/styles/main.css
+++ b/styles/main.css
@@ -271,6 +271,7 @@ svg * {
   --container-width: 102.5rem;
   --container-padding-x: 1rem;
   --transition-duration: 0.4s;
+  --box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.05);
   --100vw: calc(100vw - var(--scrollbar-width));
 }
 @media (width <= 90.06125rem) {
@@ -487,6 +488,27 @@ a[class] {
 @media (width <= 47.99875rem) {
   .section {
     padding-bottom: 100px;
+  }
+}
+
+.header-block {
+  display: grid;
+  row-gap: 30px;
+  margin-bottom: 100px;
+}
+@media (width <= 47.99875rem) {
+  .header-block {
+    row-gap: 20px;
+    margin-bottom: 75px;
+  }
+}
+
+.header-block-on {
+  margin-bottom: 100px;
+}
+@media (width <= 47.99875rem) {
+  .header-block-on {
+    margin-bottom: 75px;
   }
 }
 
@@ -905,14 +927,6 @@ a[class] {
   display: flex;
   flex-direction: column;
 }
-.transportation-cost__wrap .h2 {
-  margin-bottom: 100px;
-}
-@media (width <= 47.99875rem) {
-  .transportation-cost__wrap .h2 {
-    margin-bottom: 75px;
-  }
-}
 
 .form-request {
   display: grid;
@@ -1102,16 +1116,6 @@ a[class] {
 .about__inner {
   display: flex;
   flex-direction: column;
-  row-gap: 100px;
-}
-@media (width <= 47.99875rem) {
-  .about__inner {
-    row-gap: 75px;
-  }
-}
-.about__header {
-  display: grid;
-  row-gap: 30px;
 }
 .about__list {
   display: grid;
@@ -1135,7 +1139,7 @@ a[class] {
   border-radius: 20px;
   min-height: 558px;
   padding: 22px 13px 25px 25px;
-  box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.05);
+  box-shadow: var(--box-shadow);
   background-color: var(--color-light);
   background-size: cover;
   background-position: center;
@@ -1158,7 +1162,7 @@ a[class] {
   z-index: 1;
 }
 .about-card:hover {
-  box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.05);
+  box-shadow: var(--box-shadow);
 }
 .about-card:hover .about-card__title,
 .about-card:hover .about-card__description {
@@ -1233,16 +1237,6 @@ a[class] {
 .faq__inner {
   display: flex;
   flex-direction: column;
-  row-gap: 100px;
-}
-@media (width <= 47.99875rem) {
-  .faq__inner {
-    row-gap: 75px;
-  }
-}
-.faq__header {
-  display: grid;
-  row-gap: 30px;
 }
 
 .accordion-group {
@@ -1270,16 +1264,6 @@ a[class] {
   color: var(--color-light);
   list-style: none;
 }
-@media (any-hover: hover) {
-  .accordion__summary:hover {
-    color: var(--color-accent);
-  }
-}
-@media (any-hover: none) {
-  .accordion__summary:active {
-    color: var(--color-accent);
-  }
-}
 .accordion__summary::-webkit-details-marker {
   display: none;
 }
@@ -1299,7 +1283,7 @@ a[class] {
   aspect-ratio: 1;
   border-radius: 6px;
   background-color: var(--color-light);
-  box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.05);
+  box-shadow: var(--box-shadow);
   margin-left: 10px;
 }
 .accordion__title .square::before, .accordion__title .square::after {
@@ -1332,7 +1316,7 @@ a[class] {
   padding: 40px 20px;
   border-bottom-right-radius: 10px;
   border-bottom-left-radius: 10px;
-  box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.05);
+  box-shadow: var(--box-shadow);
   margin-top: -5px;
 }
 
@@ -1408,7 +1392,7 @@ a[class] {
 }
 .our-clients__item:nth-child(even) {
   background-color: var(--color-light);
-  box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.05);
+  box-shadow: var(--box-shadow);
 }
 .our-clients__item:nth-child(even)::before {
   background-color: var(--color-blue);
@@ -1464,76 +1448,124 @@ a[class] {
 .work-process__inner {
   display: flex;
   flex-direction: column;
-  row-gap: 100px;
-}
-@media (width <= 47.99875rem) {
-  .work-process__inner {
-    row-gap: 75px;
-  }
-}
-.work-process__header {
-  display: grid;
-  row-gap: 30px;
 }
 .work-process__description {
-  font-size: 1.125rem;
+  font-size: 18px;
   line-height: 1;
   margin-top: auto;
+}
+@media (width <= 47.99875rem) {
+  .work-process__description {
+    font-size: 1rem;
+  }
 }
 .work-process__list {
   display: grid;
   grid-template-columns: 1fr 60px 60px 1fr;
   grid-template-rows: auto auto;
-  gap: 1rem;
-}
-@media (width <= 90.06125rem) {
-  .work-process__list {
-    grid-template-columns: repeat(2, 1fr);
-  }
+  gap: 16px;
 }
 @media (width <= 63.99875rem) {
   .work-process__list {
     grid-template-columns: 1fr;
+    grid-template-rows: auto auto auto auto;
   }
 }
 .work-process__item {
   display: flex;
   flex-direction: column;
-  height: 270px;
+  row-gap: 34px;
   padding: 35px 25px 30px 25px;
   border-radius: 20px;
   background-color: var(--color-light);
+  color: var(--color-gray);
+  box-shadow: var(--box-shadow);
+}
+@media (width <= 63.99875rem) {
+  .work-process__item {
+    row-gap: 10px;
+    height: 300px;
+    padding: 50px 35px 25px 25px;
+  }
+}
+@media (width <= 47.99875rem) {
+  .work-process__item {
+    border-radius: 10px;
+    padding: 50px 40px 25px 25px;
+    height: auto;
+    row-gap: 50px;
+  }
+}
+.work-process__item h3 {
+  color: var(--color-gray);
+}
+@media (width <= 63.99875rem) {
+  .work-process__item h3 {
+    font-size: 36px;
+  }
+}
+@media (width <= 47.99875rem) {
+  .work-process__item h3 {
+    font-size: 1.25rem;
+  }
+}
+.work-process__item:nth-child(1), .work-process__item:nth-child(4) {
+  background-color: var(--color-blue);
+  color: var(--color-light);
+  box-shadow: none;
+}
+.work-process__item:nth-child(1) h3, .work-process__item:nth-child(4) h3 {
+  color: var(--color-light);
 }
 .work-process__item:nth-child(1) {
   grid-column: 1/3;
   grid-row: 1;
 }
+@media (width <= 63.99875rem) {
+  .work-process__item:nth-child(1) {
+    grid-column: 1;
+    grid-row: 1;
+  }
+}
+@media (width <= 47.99875rem) {
+  .work-process__item:nth-child(1) .work-process__title {
+    padding-right: 70px;
+  }
+}
 .work-process__item:nth-child(2) {
   grid-column: 3/5;
   grid-row: 1;
+}
+@media (width <= 63.99875rem) {
+  .work-process__item:nth-child(2) {
+    grid-column: 1;
+    grid-row: 2;
+  }
 }
 .work-process__item:nth-child(3) {
   grid-column: 1/4;
   grid-row: 2;
 }
+@media (width <= 63.99875rem) {
+  .work-process__item:nth-child(3) {
+    grid-column: 1;
+    grid-row: 3;
+  }
+}
 .work-process__item:nth-child(4) {
   grid-column: 4/5;
   grid-row: 2;
 }
-.work-process__item:nth-child(1), .work-process__item:nth-child(4) {
-  background-color: var(--color-blue);
-  color: var(--color-light);
+@media (width <= 63.99875rem) {
+  .work-process__item:nth-child(4) {
+    grid-column: 1;
+    grid-row: 4;
+  }
 }
-.work-process__item:nth-child(1) h3, .work-process__item:nth-child(4) h3 {
-  color: var(--color-light);
-}
-.work-process__item:nth-child(2), .work-process__item:nth-child(3) {
-  background-color: var(--color-light);
-  color: var(--color-gray);
-  box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.05);
-}
-.work-process__item:nth-child(2) h3, .work-process__item:nth-child(3) h3 {
-  color: var(--color-gray);
+@media (width <= 47.99875rem) {
+  .work-process__item:nth-child(4) .work-process__title {
+    padding-right: 70px;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
