секция слайдер Рабочая галерея - доработка слайдера для свайпа БЕЗ АНИМАЦИИ

--- a/styles/main.css
+++ b/styles/main.css
@@ -1753,7 +1753,9 @@ a[class] {
 }
 .workflow-gallery .container {
   position: absolute;
-  inset: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   z-index: 1;
   display: flex;
   justify-content: flex-end;
