--- a/styles/blocks/_workflow-gallery.scss
+++ b/styles/blocks/_workflow-gallery.scss
@@ -33,7 +33,9 @@
 
     .container {
         position: absolute;
-        inset: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
         z-index: 1;
         display: flex;
         justify-content: flex-end;
