--- a/styles/main.css
+++ b/styles/main.css
@@ -592,7 +592,7 @@ a[class] {
 }
 
 .header {
-  backdrop-filter: blur(60px);
+  backdrop-filter: blur(20px);
   background-color: rgba(248, 248, 248, 0.9);
   font-size: 18px;
   font-weight: 500;
@@ -1166,10 +1166,10 @@ a[class] {
   background-image: linear-gradient(rgba(0, 99, 199, 0.8), rgba(0, 99, 199, 0.8)), url("../../images/about/01.png");
 }
 .about__item:nth-child(2) .about-card::before {
-  background-image: linear-gradient(rgba(0, 99, 199, 0.8), rgba(0, 99, 199, 0.8)), url("../../images/about/02.png");
+  background-image: linear-gradient(rgba(0, 99, 199, 0.8), rgba(0, 99, 199, 0.8)), url("../../images/about/03.png");
 }
 .about__item:nth-child(3) .about-card::before {
-  background-image: linear-gradient(rgba(0, 99, 199, 0.8), rgba(0, 99, 199, 0.8)), url("../../images/about/03.png");
+  background-image: linear-gradient(rgba(0, 99, 199, 0.8), rgba(0, 99, 199, 0.8)), url("../../images/about/02.png");
 }
 .about__item:nth-child(4) .about-card::before {
   background-image: linear-gradient(rgba(0, 99, 199, 0.8), rgba(0, 99, 199, 0.8)), url("../../images/about/04.png");
@@ -1185,7 +1185,13 @@ a[class] {
 }
 @media (width <= 47.99875rem) {
   .about-card {
+    min-height: 390px;
     padding: 18px 21px 25px 20px;
+  }
+}
+@media (width <= 30.06125rem) {
+  .about-card {
+    min-height: 482px;
   }
 }
 .about-card__icon {
@@ -1359,6 +1365,7 @@ a[class] {
 @media (width <= 63.99875rem) {
   .our-clients__item {
     height: 165px;
+    padding-right: 20px;
   }
 }
 @media (width <= 47.99875rem) {
@@ -1594,6 +1601,7 @@ a[class] {
 }
 @media (width <= 47.99875rem) {
   .advantages__item {
+    border-radius: 10px;
     height: 15.625rem;
   }
 }
@@ -1958,6 +1966,11 @@ a[class] {
   overflow: hidden;
   width: 100%;
 }
+@media (width <= 47.99875rem) {
+  .reviews__item-left {
+    border-radius: 10px;
+  }
+}
 .reviews__item-photo {
   width: 100%;
   height: 100%;
@@ -1973,7 +1986,6 @@ a[class] {
 @media (width <= 30.06125rem) {
   .reviews__item-photo {
     height: 200px;
-    object-position: center bottom;
   }
 }
 .reviews__item-right {
