Блок Типы грузов - оверлей десктоп

--- a/styles/blocks/_cargo-types.scss
+++ b/styles/blocks/_cargo-types.scss
@@ -1,6 +1,17 @@
 @use "../helpers"as *;
 
 .cargo-types {
+    .stretched-link::after {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        z-index: 3;
+        content: "";
+        cursor: pointer;
+    }
+
     &__list {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
@@ -173,4 +184,90 @@
         height: 100%;
         flex-direction: column;
     }
+
+    &__modal {
+        border-radius: 20px;
+        background: var(--color-base) !important;
+        vertical-align: top !important;
+        width: 1640px;
+        height: 100%;
+        padding-top: 100px !important;
+        padding-bottom: 100px !important;
+        position: relative;
+
+        &::-webkit-scrollbar {
+            width: 0;
+        }
+
+        &-inner {
+            position: relative;
+            display: grid;
+            grid-template-columns: 1116px auto;
+            column-gap: 30px;
+            justify-content: center;
+        }
+
+        &-close {
+
+            display: flex;
+            flex-direction: column;
+            height: 80vh;
+            min-height: 200px;
+            overflow: auto;
+            position: sticky;
+            top: 0;
+            right: 0;
+        }
+
+        &-list {
+            display: flex;
+            flex-direction: column;
+            row-gap: 30px;
+            margin-inline: auto;
+            height: 100%;
+
+
+            ::marker {
+                font-weight: 700;
+                font-size: 24px;
+                color: var(--color-blue);
+            }
+        }
+
+        &-title {
+            font-weight: 700;
+            font-size: 24px;
+            line-height: 1.20833;
+            color: var(--color-blue);
+        }
+
+        &-sublist {
+            ::marker {
+                font-weight: 400;
+                color: var(--color-gray);
+            }
+        }
+
+        &-subitem {
+            list-style-type: disc;
+            font-weight: 400;
+
+        }
+
+
+    }
+}
+
+// .fancybox-bg {
+//     background-color: var(--color-base) !important;
+//     border-radius: 20px;
+// }
+
+// .fancybox-is-open .fancybox-bg {
+//     opacity: 1 !important;
+//     border-radius: 20px;
+// }
+
+button.fancybox-button--close {
+    display: none;
 }
