--- a/styles/blocks/_cargo-types.scss
+++ b/styles/blocks/_cargo-types.scss
@@ -209,9 +209,17 @@
             justify-content: center;
             background-color: var(--color-base);
             width: 100%;
+            max-width: 1000px;
+            padding-left: rem(50);
+            padding-right: 15px;
             transform: scale(0.9);
             transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
             overflow-y: auto;
+            order: 1;
+            @include mobile {
+                order: 2;
+                padding-left: rem(24);
+            }
         }
 
         &-close {
@@ -220,6 +228,13 @@
             position: sticky;
             top: 0;
             right: 0;
+            padding-left: 15px;
+            order: 2;
+            @include mobile {
+                order: 1;
+                margin-left: auto;
+            }
+
         }
 
         &-list {
@@ -233,6 +248,14 @@
                 font-weight: 700;
                 font-size: 24px;
                 color: var(--color-blue);
+
+                @include tablet {
+                    font-size: 18px;
+                }
+
+                @include mobile {
+                    font-size: 14px;
+                }
             }
         }
 
@@ -241,6 +264,14 @@
             font-size: 24px;
             line-height: 1.20833;
             color: var(--color-blue);
+
+            @include tablet {
+                font-size: 18px;
+            }
+
+            @include mobile {
+                font-size: 14px;
+            }
         }
 
         &-sublist {
@@ -259,12 +290,24 @@
     &__wrapper {
         position: relative;
         display: grid;
-        grid-template-columns: auto 75px;
-        width: 100%;
+        grid-template-columns: auto 60px;
+        justify-content: center;
+        width: 99%;
         height: 100%;
         background-color: var(--color-base);
-        padding: 100px;
+        padding-block: rem(100);
         border-radius: 20px;
+
+        @include tablet {
+            padding-block: rem(60);
+        }
+
+        @include mobile {
+            grid-template-columns: 1fr;
+            row-gap: 10px;
+            padding-block: rem(30) rem(60);
+            border-radius: 10px;
+        }
     }
 }
 
@@ -277,6 +320,3 @@
     transform: scale(1);
 }
 
-body.no-scroll {
-    overflow: hidden;
-}
