--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -7,6 +7,7 @@
     --color-gray: #1e1e1e;
     --color-light-gray: #D9D9D9;
     --color-notes: #a3a3a3;
+    --color-line: #6b6b6b;
 
     --color-blue: #0063c7;
     --color-accent: #003366;
@@ -37,3 +38,4 @@
         --container-padding-x: #{rem(24)};
     }
 }
+
